# SK-JSP-puzzle-solver

./: README.md
JSP-Solver/: .gitignore  README.md
JSP-Solver/client/: requirements.txt
JSP-Solver/client/src/: app.py
MMSOB-Matching/: README.md
MMSOB-Matching/backend/: main.cpp  run.sh
RedisDB/: .gitignore
RedisDB/backend/: CMakeLists.txt  main.cpp  run.sh
RedisDB/backend/include/: server.h
RedisDB/backend/service/: client.cpp  server.cpp
black-scholes-model/: README.md
black-scholes-model/backend/: CMakeLists.txt  main.cpp
black-scholes-model/backend/controller/: HeatmapRequestHandler.cpp  MainRequestHandler.cpp  Server.cpp
black-scholes-model/backend/model/: BlackScholes.cpp  BlackScholes.h
black-scholes-model/backend/services/: timer.cpp
black-scholes-model/backend/tests/: test1.cpp
black-scholes-model/client/src/: app.py  black_scholes.py  montecarlo_simulation.py  volatility_forecasting.py  wabo.py
